--- a/free-nodes/page-28.htm
+++ b/free-nodes/page-28.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2024-03-06">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-3-6-clash-node.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/fef0909e4847bf6f5fa889948879dd84.webp" alt="3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-3-6-clash-node.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了美国、加拿大、香港、日本、欧洲、韩国、新加坡等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2024-03-05">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-3-5-free-clash.htm" class="xcblog-blog-url">
@@ -203,16 +217,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-6-2-free-clash.htm" title="6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-20-free-high-speed-nodes.htm" title="11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐">11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-21-free-clash-subscribe.htm" title="6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-29-shadowrocket-node.htm" title="10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">10月29日→22.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-11-shadowrocket-node.htm" title="4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-2-free-high-speed-nodes.htm" title="10月2日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">10月2日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-25-free-subscribe-node.htm" title="9月25日→18.7M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">9月25日→18.7M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-5-clash-node-daily-updates.htm" title="8月5日→19.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">8月5日→19.5M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-30-clash-v2ray-ss-ssr.htm" title="4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址">4月30日→19.3M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-23-free-v2ray-subscribe.htm" title="9月23日→20.9M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">9月23日→20.9M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-14-free-v2ray.htm" title="11月14日→22.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月14日→22.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-13-clash-node.htm" title="10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">10月13日→20.1M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-15-clash-node.htm" title="10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">10月15日→21M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-20-clash-v2ray-ss-ssr.htm" title="9月20日→22.5M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">9月20日→22.5M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-11-free-clash.htm" title="5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-22-free-node-subscribe.htm" title="6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址">6月22日→21.6M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-9-26-free-v2ray.htm" title="9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址">9月26日→19.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-17-clash-node.htm" title="4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接">4月17日→18.2M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-3-free-high-speed-nodes.htm" title="12月3日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐">12月3日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-19-node-share.htm" title="11月19日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">11月19日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -224,7 +238,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">21</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
